New version using Cell derived classes

--- a/sample_projects/physimess/Makefile
+++ b/sample_projects/physimess/Makefile
@@ -56,7 +56,7 @@ PhysiCell_signal_behavior.o
 PhysiCell_module_OBJECTS := PhysiCell_SVG.o PhysiCell_pathology.o PhysiCell_MultiCellDS.o PhysiCell_various_outputs.o \
 PhysiCell_pugixml.o PhysiCell_settings.o PhysiCell_geometry.o
 
-PhysiMeSS_OBJECTS := PhysiMeSS.o
+PhysiMeSS_OBJECTS := PhysiMeSS.o PhysiMESS_agent.o PhysiMESS_fibre.o PhysiMESS_cell.o
 
 # put your custom objects here (they should be in the custom_modules directory)
 
@@ -169,6 +169,14 @@ PhysiCell_geometry.o: ./modules/PhysiCell_geometry.cpp
 PhysiMeSS.o: ./addons/PhysiMeSS/PhysiMeSS.cpp 
 	$(COMPILE_COMMAND) -c ./addons/PhysiMeSS/PhysiMeSS.cpp
 
+PhysiMESS_agent.o: ./addons/PhysiMeSS/PhysiMESS_agent.cpp 
+	$(COMPILE_COMMAND) -c ./addons/PhysiMeSS/PhysiMESS_agent.cpp
+
+PhysiMESS_fibre.o: ./addons/PhysiMeSS/PhysiMESS_fibre.cpp 
+	$(COMPILE_COMMAND) -c ./addons/PhysiMeSS/PhysiMESS_fibre.cpp
+
+PhysiMESS_cell.o: ./addons/PhysiMeSS/PhysiMESS_cell.cpp 
+	$(COMPILE_COMMAND) -c ./addons/PhysiMeSS/PhysiMESS_cell.cpp
 
 # user-defined PhysiCell modules
 
@@ -188,7 +196,7 @@ reset:
 	cp ./config/PhysiCell_settings-backup.xml ./config/PhysiCell_settings.xml 
 	touch ./config/empty.csv
 	rm -f ./config/mymodel.xml *.csv
-	rm -fr ./config/Cell_Fibre_Mechanics ./config/Fibre_Crosslinks ./config/Fibre_Initialisation ./config/Neighbours_in_voxels
+	rm -fr ./config/Cell_Fibre_Mechanics ./config/Fibre_Crosslinks ./config/Fibre_Initialisation ./config/Fibre_Degradation ./config/Neighbours_in_voxels
 	
 clean:
 	rm -f *.o
